projects/compiler/test/typechecker/try/error_untryable_type.out
Error at %FILE_NAME%:2:15
Invalid subject for try expression
  |    val x = try 123
                   ^
This value has type 'Int', which is not Try-able
