projects/compiler/test/typechecker/try/error_untryable_type.abra
func foo(): Result<Int, Int> {
  val x = try 123
  Ok(1)
}